# rag-eval-qa-single-doc

./: .env.example  .gitignore  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  config.yaml  pyproject.toml
scripts/: generate_corpus.py  generate_questions.py
src/single_doc_generator/: __init__.py  agent.py  config.py  corpus_processor.py  deduplicator.py  generator.py  llm.py  models.py  orchestrator.py  persistence.py  prompt_loader.py  tracing.py  validator.py
src/single_doc_generator/prompts/: deduplicator.yaml  generator.yaml  validator.yaml
src/single_doc_generator/toolkit/: __init__.py  adoc_adapter.py  base.py  html_adapter.py  langchain_tools.py  markdown_adapter.py  pdf_adapter.py  text_adapter.py  tools.py  xml_adapter.py
tests/: __init__.py  conftest.py
tests/fixtures/: abhorrent-apparition.md  django_csrf.html  pubmed_paper.xml  pubmed_paper_with_figures.xml
tests/integration/: __init__.py  test_cross_format.py  test_deduplicator_integration.py  test_llm_integration.py  test_tracing_integration.py
tests/unit/: test_adoc_adapter.py  test_config.py  test_corpus_processor.py  test_deduplicator.py  test_generator.py  test_html_adapter.py  test_langchain_tools.py  test_markdown_adapter.py  test_models.py  test_orchestrator.py  test_pdf_adapter.py  test_text_adapter.py  test_tools.py  test_tracing.py  test_validator.py  test_xml_adapter.py
